# FastAPIProject

./: Dockerfile  docker-compose.yml  pyproject.toml
alembic/versions/: 5af23f6a7aad_create_initial_tables.py  b3e96b6629d7_initial_schema.py  d6865df5f660_initial_schema.py
application/: application.py
infrastructure/db/: session.py
infrastructure/repositories/: order_notification.py  post_comments.py  post_likes.py  post_notifications.py  post_orders.py  user_orders.py  user_posts.py  user_profile.py  user_role.py
src/: application.py  config.py  db.py  session.py
src/application/: application.py
src/config/: __init__.py  config.py  kafka.py  redis.py
src/exceptions/: common.py  http.py
src/models/: __init__.py  base.py  comments.py  notifications.py  orders.py  posts.py  profiles.py  roles.py  users.py
src/outbox/: repository.py  table.py
src/repositories/: comments.py  order_notification.py  orders.py  post_comments.py  post_likes.py  post_notifications.py  post_orders.py  posts.py  profiles.py  roles.py  user_orders.py  user_profile.py  user_role.py  users.py
src/routes/: comments.py  healthcheck_router.py  orders.py  posts.py  posts_orders.py  profiles.py  roles.py  roles_comments.py  users.py  users_profiles.py
src/schemas/: comments.py  common.py  orders.py  posts.py  profiles.py  roles.py  users.py
src/services/: comments.py  orders.py  posts.py  profiles.py  roles.py  users.py
tests/: conftest.py
tests/integration/: post_orders.py  role_comments.py  user_profiles.py
tests/services/: test_comments_service.py  test_orders_service.py  (+4 more)
(+10 files in other folders)
